assets/css/collection.css
a {
  color: #00b248;
  font-weight: bold;
}

ul {
  list-style-type: none;
}

table {
  font-size: 1.2em;
}

th a {
  color: #000;
  cursor: pointer;
}

.game-container {
  font-size: 18px;
  margin-bottom: 10px;
}

.right {
  float: right;
}

.show-hide {
  transition: all linear 0.25s;
}

.show-hide.ng-hide {
  opacity: 0;
  height: auto;
}

.vertical-center {
  display: flex;
  justify-content: center;
  align-items: center;
}

.game-thumbnail {
  padding: 5px;
}

.overlay {
  position:fixed;
  z-index:9999;
  top:0;
  left:0;
  width:100%;
  height:100%;
  background-color:#000;
  opacity: 0.8;
}

.modal-content {
  z-index:10000;
  position: fixed;
  width: 50%;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  background-color: rgba(255,255,255, 1.0);
  box-shadow: 4px 4px 80px #000;
  opacity: 1.0;
  padding: 10px;
}

.display-toggle {
  font-size: 2em;
  cursor: pointer;
  float: right;
  margin-right: 5px;
}

.display-active {
  color: #00b248;
}

.display-inactive {
  color: #cccccc;
}

.game-description {
  height: 300px;
  overflow: auto;

}

.tag {
  padding: 5px;
  display: inline-block;
  background-color: #00b248;
  border-radius: 4px;
  margin-right: 5px;
  margin-bottom: 5px;
  color: #FFF;
}

.btn-active {
  background-color: #00b248;
}

.btn-inactive {
  background-color: #FFF;
}

.details-container img {
  height: 300px;
}

.details-description-container {
  display: inline-block;
}

#collection-header {
  height: 50px;
  background-color: #FFF;
  color: #000;
}

